--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
 *{
-	/*
-	border: 1px red dotted;*/
+	/*border: 1px red dotted;*/
 	font-family: 'IBM Plex Sans', sans-serif;
 }
 img{
@@ -27,7 +26,6 @@ img{
 body{
 	background: #0F1016;
 	color: #FFF;
-	width: 100%;
 }
 .content {
 	height: 100%;
@@ -47,6 +45,34 @@ body{
 	font-weight: 600;
 	line-height: normal;
 	text-transform: uppercase;
+}
+.header__burger{
+	display: none;
+}.header__burger::before,
+.header__burger::after{
+	content: '';
+	background-color: #FFF;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	left: 0;
+	
+	transition: all 0.3s ease 0s;
+}.header__burger::before{
+	top:0;
+}
+.header__burger span{
+	position: absolute;
+	background-color: #fff;
+	position: absolute;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	top: 9px;
+	transition: all 0.3s ease 0s;
+}
+.header__burger::after{
+	bottom: 0;
 }
 .buttons-container__header { 
 	display: flex;
@@ -256,7 +282,7 @@ body{
 	background-color: #1E1D1E;
 	margin-top: 120px;
 	padding: 120px 0;
-	width: 100%;
+	
  }
 .header__gallery { 
 	font-size: 35px;
@@ -271,24 +297,54 @@ body{
 	
 	justify-content: space-between;
 }
-.image-box__check-box-container { }
 .check-box__check-box-container { 
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 }
 .radio-container__check-box {
+	
+	display: flex;
+	align-items: center;
 	width: 555px;
 	height: 95.743px;	
 	border-radius: 20px;
 	border: 1px solid #A1A1A1;
 	padding: 10px;
  }
+ 
  .radio-container__text-box{
 	position: relative;
 	display: flex;
 	align-items: center;
  }
+ .dot-box{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 21px;
+	height: 21px;
+	border: 1px solid #BABABA;
+	border-radius: 50%;
+	margin-right: 20px;
+ }
+ .dot-box::after{
+	content: "";
+	height: 65%;
+	width: 65%;
+	background: #FFF;
+	border-radius: 50%;
+	transform: scale(0);
+	transition: 300ms ease-in-out 0s;
+ }
+ 
+ /* .dot-in-dot{
+	width: 60%;
+	height: 60%;
+	border-radius: 50%;
+	background: #FFF;
+ } */
+/*
 .radio-container__text-box::before {
 	content: "";
 	width: 21px;
@@ -296,7 +352,7 @@ body{
 	border: 1px solid #BABABA;
 	border-radius: 50%;
 	margin-right: 20px;
-}
+}*/
 /*
 .radio__radio-container{
 	display: flex;
@@ -305,6 +361,7 @@ body{
 	width: 12%;
 }*/
 .text-container__radio{
+	position: relative;
 	width: 439px;
 }
 .radio-container__text-box p:nth-child(1){
@@ -329,7 +386,61 @@ input[type="radio"]:checked + label{
 	background: #1F2D25;
 	border: none;
 }
-input[type="radio"]:checked + label::before{
-	border: 1px solid #fff;
-}
+input[type="radio"]:checked + label div:nth-child(1)::after {
+	transform: scale(1);
+ }
+ 
 
+ /*-----------------------ADAPTIVE------------------------------------ */
+@media (max-width:768px){
+	
+	.content{
+		width: 722px;
+	}
+}
+@media (max-width: 576px){
+	.header__burger{
+		display: block;
+		position: relative; 
+		width: 30px;
+		height: 20px;
+		z-index: 3;
+	}
+	.header-menu{
+		position: fixed;
+		top: 0;
+		right: -100%;		
+		width: 100%;
+		height: 100%;
+		background-color: #205c3a;
+		z-index: 2;
+		padding: 70px 10px 10px 10px;
+		transition: all 0.3s ease 0s;
+	}
+	.header-menu.active{
+		right: 0;
+	}
+	.header__burger.active::before{
+		transform:rotate(45deg);
+		top: 9px;
+	}.header__burger.active span{
+		transform: scale(0);
+	}
+	.header__burger.active::after{
+		transform:rotate(-45deg);
+		bottom: 9px;
+	}
+	.buttons-container__header{
+		display: block;
+	}
+	.buttons-container__header li{
+		margin: 0 0 20px 0;
+	}
+	.button__header{
+		margin: 0;
+	}
+	.content{
+		width: 100%;
+	}
+}
+ /*------------------------------------------------------------------- */
