--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 img{
 	max-width: 100%;
 }
+html {
+	height: auto;
+}
 body{
+	min-height: fit-content;
 	background: #0F1016;
 	color: #FFF;
 }
@@ -48,6 +52,7 @@ body{
 }
 .header__burger{
 	display: none;
+	order: 3;
 }.header__burger::before,
 .header__burger::after{
 	content: '';
@@ -59,6 +64,7 @@ body{
 	
 	transition: all 0.3s ease 0s;
 }.header__burger::before{
+	
 	top:0;
 }
 .header__burger span{
@@ -335,7 +341,7 @@ body{
 	background: #FFF;
 	border-radius: 50%;
 	transform: scale(0);
-	transition: 300ms ease-in-out 0s;
+	transition: 300ms ease-in-out 0s
  }
  
  /* .dot-in-dot{
@@ -395,10 +401,20 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 @media (max-width:768px){
 	
 	.content{
-		width: 722px;
+		width: 80%;
 	}
 }
 @media (max-width: 576px){
+	.content{
+		width: 80%;
+	}
+	header{
+		position: sticky;
+		top: 0;
+		z-index: 3;
+		background-color: #0F1016;
+	}
+	
 	.header__burger{
 		display: block;
 		position: relative; 
@@ -410,12 +426,13 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 		position: fixed;
 		top: 0;
 		right: -100%;		
-		width: 100%;
-		height: 100%;
-		background-color: #205c3a;
+		width: 55%;
+		height: 110%;
+		background: rgba(32, 92, 58, 1);
 		z-index: 2;
 		padding: 70px 10px 10px 10px;
 		transition: all 0.3s ease 0s;
+		border: #1F2D25 3px solid;
 	}
 	.header-menu.active{
 		right: 0;
@@ -431,16 +448,20 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 		bottom: 9px;
 	}
 	.buttons-container__header{
-		display: block;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
 	}
 	.buttons-container__header li{
-		margin: 0 0 20px 0;
+		margin: 0 0 60px 0;
+		padding: 15px;
 	}
 	.button__header{
 		margin: 0;
+		font-size: 30px;
 	}
-	.content{
-		width: 100%;
-	}
+	
 }
  /*------------------------------------------------------------------- */
