--- a/css/style.css
+++ b/css/style.css
@@ -305,8 +305,15 @@ h2{
 }
 .check-box-container { 
 	display: flex;
-	
 	justify-content: space-between;
+}
+.gallery-container{
+	height: 347px;
+	overflow: hidden;
+}
+.image-box__check-box-container{
+	transition: all ease 1s;
+	position: relative;
 }
 .check-box__check-box-container { 
 	display: flex;
@@ -314,7 +321,7 @@ h2{
 	justify-content: space-around;
 }
 .radio-container__check-box {
-	
+	cursor: pointer;
 	display: flex;
 	align-items: center;
 	width: 555px;
@@ -341,36 +348,13 @@ h2{
  }
  .dot-box::after{
 	content: "";
-	height: 65%;
-	width: 65%;
+	height: 66%;
+	width: 66%;
 	background: #FFF;
 	border-radius: 50%;
 	transform: scale(0);
 	transition: 300ms ease-in-out 0s
  }
- 
- /* .dot-in-dot{
-	width: 60%;
-	height: 60%;
-	border-radius: 50%;
-	background: #FFF;
- } */
-/*
-.radio-container__text-box::before {
-	content: "";
-	width: 21px;
-	height: 21px;
-	border: 1px solid #BABABA;
-	border-radius: 50%;
-	margin-right: 20px;
-}*/
-/*
-.radio__radio-container{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 12%;
-}*/
 .text-container__radio{
 	position: relative;
 	width: 439px;
@@ -404,8 +388,6 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
  .reviev { 
 	margin: 120px;
  }
- .content { }
- .green-button { }
  .wrapper__reviev { 
 	display: flex;
 }
@@ -506,7 +488,7 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
   }
   .faq{
 	margin-bottom: 140px;
-	height: fit-content;
+	height: 541px;
   }
   .faq-wrapper{
 	display: flex;
@@ -571,6 +553,8 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 	transform: rotate(180deg);
   }
   .dropdown-child__faq:hover .dropdown-body{
+	
+	
 	display: block;
  }
   .image-side__faq{
