--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
+*{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 /*--------------------*/
 
 *{
@@ -378,6 +379,10 @@ h2{
 input[type="radio"]{
 	display: none;
 }
+label{
+	
+	transition: all ease 0.5s;
+}
 input[type="radio"]:checked + label{
 	background: #1F2D25;
 	border: none;
@@ -406,7 +411,7 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 	height: 64px;
 	background-color: #FFF;
 	border-radius: 50%;
-	
+	transition: all ease 0.2s;
     cursor: pointer;
  }
  .reviev-button::after{
@@ -426,9 +431,17 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 	right: 45%;
 	transform: translateY(-50%) rotate(-45deg);
   }
+  .reviev-button-active{
+	background-color: #434347;
+  }
+  .reviev-button-active:after{
+	border-color: #fff;
+  }
   .reviev-button:active{
 	background-color: #434347;
-  }.reviev-button:active::after{
+  }
+  
+  .reviev-button:active::after{
 	border-color: #fff;
   }
  .revievs-container {
@@ -562,10 +575,31 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
   footer{
 	background-color: #1E1D1E;
   }
- 
+  .footer-wrapper{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  }
+  .contacts__footer{
+	display: flex;
+  }
+  .contacts__footer a{
+	color: #BABABA;
+	font-size: 13px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+  }
+  .contacts__footer div:nth-child(1){
+	margin-right: 27px;	
+  }.contacts__footer div:nth-child(2){
+	margin-left: 27px;	
+  }
  /*-----------------------ADAPTIVE------------------------------------ */
 @media (max-width:768px){
-	
+	*:active{
+		outline: none;
+	}
 	.content{
 		width: 80%;
 	}
@@ -815,8 +849,37 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 		background-color: #FFF;
 		border-radius: 50%;
 		cursor: pointer;
-
+		transition: all ease 0.1s;
 	 }
+	 .galerry-button::after{
+		content: '';
+		position: absolute;
+		top: 50%;
+		border-width: 0 2px 2px 0;
+		border-style: solid;
+		border-color: #292D32;
+		padding: 3px;
+	 }
+	 .left-button__checkbox::after{
+		transform: translateY(-50%) rotate(135deg);
+		left: 45%;
+	 }
+	 .right-button__checkbox::after{
+		right: 45%;
+		transform: translateY(-50%) rotate(-45deg);
+	  }
+	  .galerry-button-active{
+		background-color: #434347;
+	  }
+	  .galerry-button-active:after{
+		border-color: #fff;
+	  } .galerry-button:active{
+		background-color: #434347;
+	  }
+	  
+	  .galerry-button:active::after{
+		border-color: #fff;
+	  }
 	.text-window__checkbox {
 		width: 70%;
 		overflow: hidden;
@@ -881,8 +944,20 @@ input[type="radio"]:checked + label div:nth-child(1)::after {
 	.faq-wrapper{
 		flex-wrap: wrap;
 	}
+	.dropdown-opener{
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: normal;
+	}
+	.text-side__faq{
+		margin: 0;
+	}
 	.image-side__faq{
 		height: 414px;
+	}.image-side__faq img{
+		width: 400px;
+		height: 100%;
 	}
 }
  /*------------------------------------------------------------------- */
